RESOLVED FIXED144147
CrashTracer: [USER] com.apple.WebKit.Networking at com.apple.WebKit: WebKit::NetworkResourceLoader::~NetworkResourceLoader + 14
https://bugs.webkit.org/show_bug.cgi?id=144147
Summary CrashTracer: [USER] com.apple.WebKit.Networking at com.apple.WebKit: WebKit::...
Antti Koivisto
Reported 2015-04-24 06:56:04 PDT
1 libobjc.A.dylib 0x7fff8d78ae9d objc_msgSend + 0x1d > 2 com.apple.WebKit 0x7fff9128b986 WebKit::NetworkResourceLoader::~NetworkResourceLoader() + 0xe 3 com.apple.WebKit 0x7fff91362a77 std::__1::__function::__func<WebKit::NetworkResourceLoader::didFinishLoading(WebCore::ResourceHandle*, double)::$_1, std::__1::allocator<WebKit::NetworkResourceLoader::didFinishLoading(WebCore::ResourceHandle*, double)::$_1>, void (WebKit::NetworkCache::MappedBody&)>::destroy_deallocate() + 0x51 4 com.apple.WebKit 0x7fff91349dad std::__1::__function::__func<WebKit::NetworkCache::Cache::store(WebCore::ResourceRequest const&, WebCore::ResourceResponse const&, WTF::RefPtr<WebCore::SharedBuffer>&&, std::__1::function<void (WebKit::NetworkCache::MappedBody&)>)::$_1, std::__1::allocator<WebKit::NetworkCache::Cache::store(WebCore::ResourceRequest const&, WebCore::ResourceResponse const&, WTF::RefPtr<WebCore::SharedBuffer>&&, std::__1::function<void (WebKit::NetworkCache::MappedBody&)>)::$_1>, void (WebKit::NetworkCache::Data const&)>::destroy_deallocate() + 0x21 5 com.apple.WebKit 0x7fff91352a5c WTF::HashTable<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> >, std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> >, WTF::IdentityExtractor, WTF::PtrHash<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> > >, WTF::HashTraits<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> > >, WTF::HashTraits<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> > > >::deleteBucket(std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> >&) + 0x38 6 com.apple.WebKit 0x7fff913529eb WTF::HashTable<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> >, std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> >, WTF::IdentityExtractor, WTF::PtrHash<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> > >, WTF::HashTraits<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> > >, WTF::HashTraits<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> > > >::remove(std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> >*) + 0x11 7 com.apple.WebKit 0x7fff91351546 std::__1::enable_if<IsSmartPtr<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> > >::value, bool>::type WTF::HashSet<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> >, WTF::PtrHash<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> > >, WTF::HashTraits<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> > > >::remove<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> > >(WTF::GetPtrHelper<std::__1::unique_ptr<WebKit::NetworkCache::Storage::WriteOperation const, std::__1::default_delete<WebKit::NetworkCache::Storage::WriteOperation const> > >::PtrType) + 0x30 8 com.apple.WebKit 0x7fff9134ce09 WebKit::NetworkCache::Storage::finishWriteOperation(WebKit::NetworkCache::Storage::WriteOperation const&) + 0x15 9 com.apple.WebKit 0x7fff914c47f9 ___ZN6WebKit12NetworkCache9IOChannel5writeEmRKNS0_4DataENSt3__18functionIFviEEE_block_invoke + 0x19 10 libdispatch.dylib 0x7fff8dbe624d ___dispatch_operation_deliver_data_block_invoke + 0x76 11 libdispatch.dylib 0x7fff8dbca54c _dispatch_call_block_and_release + 0xc 12 libdispatch.dylib 0x7fff8dbc643c _dispatch_client_callout + 0x8 13 libdispatch.dylib 0x7fff8dbc9edd _dispatch_queue_drain + 0x2e5 14 libdispatch.dylib 0x7fff8dbc9aa7 _dispatch_queue_invoke + 0xc8 15 libdispatch.dylib 0x7fff8dbd76a8 _dispatch_main_queue_callback_4CF + 0x19e 16 com.apple.CoreFoundation 0x7fff92de5699 __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ + 0x9 17 com.apple.CoreFoundation 0x7fff92da1124 __CFRunLoopRun + 0x774 18 com.apple.CoreFoundation 0x7fff92da0748 CFRunLoopRunSpecific + 0x128 19 com.apple.Foundation 0x7fff958bf138 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 0x10e 20 com.apple.Foundation 0x7fff95933f9e -[NSRunLoop(NSRunLoop) run] + 0x4a 21 libxpc.dylib 0x103355ede _xpc_objc_main + 0x2ef 22 libxpc.dylib 0x103357657 xpc_main + 0x1ee 23 com.apple.WebKit.Networking 0x103323b30 main + 0x10 (/Library/Caches/com.apple.xbs/Sources/WebKit2/WebKit2-7601.1.27.2/Shared/EntryPointUtilities/mac/XPCService/XPCServiceMain.mm:80) 24 libdyld.dylib 0x7fff93ad65ad start + 0x1
Attachments
patch (10.20 KB, patch)
2015-04-24 07:57 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2015-04-24 06:56:24 PDT
Antti Koivisto
Comment 2 2015-04-24 07:57:50 PDT
Chris Dumez
Comment 3 2015-04-24 11:03:21 PDT
Comment on attachment 251550 [details] patch r=me
WebKit Commit Bot
Comment 4 2015-04-24 11:58:36 PDT
Comment on attachment 251550 [details] patch Clearing flags on attachment: 251550 Committed r183273: <http://trac.webkit.org/changeset/183273>
WebKit Commit Bot
Comment 5 2015-04-24 11:58:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.