Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.cpp
@@ -49,6 +49,32 @@ static const char bodyPostfix[] = "-body";
 
 static double computeRecordWorth(FileTimes);
 
+struct Storage::ReadOperation {
+    ReadOperation(const Key& key, const RetrieveCompletionHandler& completionHandler)
+        : key(key)
+        , completionHandler(completionHandler)
+    { }
+
+    const Key key;
+    const RetrieveCompletionHandler completionHandler;
+    
+    std::unique_ptr<Record> resultRecord;
+    SHA1::Digest expectedBodyHash;
+    BlobStorage::Blob resultBodyBlob;
+    std::atomic<unsigned> activeCount { 0 };
+};
+
+struct Storage::WriteOperation {
+    WriteOperation(const Record& record, const MappedBodyHandler& mappedBodyHandler)
+        : record(record)
+        , mappedBodyHandler(mappedBodyHandler)
+    { }
+    
+    Record record;
+    MappedBodyHandler mappedBodyHandler;
+    std::atomic<unsigned> activeCount { 0 };
+};
+
 std::unique_ptr<Storage> Storage::open(const String& cachePath)
 {
     ASSERT(RunLoop::isMain());
@@ -87,6 +113,9 @@ Storage::Storage(const String& baseDirectoryPath)
     synchronize();
 }
 
+Storage::~Storage()
+{
+}
 
 String Storage::basePath() const
 {
@@ -351,25 +380,27 @@ static Data encodeRecordMetaData(const RecordMetaData& metaData)
     return Data(encoder.buffer(), encoder.bufferSize());
 }
 
-Optional<BlobStorage::Blob> Storage::storeBodyAsBlob(const Record& record, const MappedBodyHandler& mappedBodyHandler)
+Optional<BlobStorage::Blob> Storage::storeBodyAsBlob(WriteOperation& writeOperation)
 {
-    auto bodyPath = bodyPathForKey(record.key);
+    auto bodyPath = bodyPathForKey(writeOperation.record.key);
 
     // Store the body.
-    auto blob = m_blobStorage.add(bodyPath, record.body);
+    auto blob = m_blobStorage.add(bodyPath, writeOperation.record.body);
     if (blob.data.isNull())
         return { };
 
-    auto hash = record.key.hash();
-    RunLoop::main().dispatch([this, blob, hash, mappedBodyHandler] {
+    ++writeOperation.activeCount;
+
+    RunLoop::main().dispatch([this, blob, &writeOperation] {
         if (m_bodyFilter)
-            m_bodyFilter->add(hash);
+            m_bodyFilter->add(writeOperation.record.key.hash());
         if (m_synchronizationInProgress)
-            m_bodyFilterHashesAddedDuringSynchronization.append(hash);
+            m_bodyFilterHashesAddedDuringSynchronization.append(writeOperation.record.key.hash());
 
-        if (mappedBodyHandler)
-            mappedBodyHandler(blob.data);
+        if (writeOperation.mappedBodyHandler)
+            writeOperation.mappedBodyHandler(blob.data);
 
+        finishWriteOperation(writeOperation);
     });
     return blob;
 }
@@ -424,6 +455,12 @@ void Storage::dispatchReadOperation(ReadOperation& readOperation)
 
     auto recordPath = recordPathForKey(readOperation.key);
 
+    ++readOperation.activeCount;
+
+    bool shouldGetBodyBlob = !m_bodyFilter || m_bodyFilter->mayContain(readOperation.key.hash());
+    if (shouldGetBodyBlob)
+        ++readOperation.activeCount;
+
     RefPtr<IOChannel> channel = IOChannel::open(recordPath, IOChannel::Type::Read);
     channel->read(0, std::numeric_limits<size_t>::max(), &ioQueue(), [this, &readOperation](const Data& fileData, int error) {
         if (!error)
@@ -431,11 +468,8 @@ void Storage::dispatchReadOperation(ReadOperation& readOperation)
         finishReadOperation(readOperation);
     });
 
-    bool shouldGetBodyBlob = !m_bodyFilter || m_bodyFilter->mayContain(readOperation.key.hash());
-    if (!shouldGetBodyBlob) {
-        finishReadOperation(readOperation);
+    if (!shouldGetBodyBlob)
         return;
-    }
 
     // Read the body blob in parallel with the record read.
     ioQueue().dispatch([this, &readOperation] {
@@ -447,9 +481,9 @@ void Storage::dispatchReadOperation(ReadOperation& readOperation)
 
 void Storage::finishReadOperation(ReadOperation& readOperation)
 {
+    ASSERT(readOperation.activeCount);
     // Record and body blob reads must finish.
-    bool isComplete = ++readOperation.finishedCount == 2;
-    if (!isComplete)
+    if (--readOperation.activeCount)
         return;
 
     RunLoop::main().dispatch([this, &readOperation] {
@@ -534,7 +568,7 @@ static bool shouldStoreBodyAsBlob(const Data& bodyData)
     return bodyData.size() > maximumInlineBodySize;
 }
 
-void Storage::dispatchWriteOperation(const WriteOperation& writeOperation)
+void Storage::dispatchWriteOperation(WriteOperation& writeOperation)
 {
     ASSERT(RunLoop::isMain());
     ASSERT(m_activeWriteOperations.contains(&writeOperation));
@@ -548,8 +582,10 @@ void Storage::dispatchWriteOperation(const WriteOperation& writeOperation)
 
         WebCore::makeAllDirectories(partitionPath);
 
+        ++writeOperation.activeCount;
+
         bool shouldStoreAsBlob = shouldStoreBodyAsBlob(writeOperation.record.body);
-        auto bodyBlob = shouldStoreAsBlob ? storeBodyAsBlob(writeOperation.record, writeOperation.mappedBodyHandler) : Nullopt;
+        auto bodyBlob = shouldStoreAsBlob ? storeBodyAsBlob(writeOperation) : Nullopt;
 
         auto recordData = encodeRecord(writeOperation.record, bodyBlob);
 
@@ -565,9 +601,15 @@ void Storage::dispatchWriteOperation(const WriteOperation& writeOperation)
     });
 }
 
-void Storage::finishWriteOperation(const WriteOperation& writeOperation)
+void Storage::finishWriteOperation(WriteOperation& writeOperation)
 {
+    ASSERT(RunLoop::isMain());
+    ASSERT(writeOperation.activeCount);
     ASSERT(m_activeWriteOperations.contains(&writeOperation));
+
+    if (--writeOperation.activeCount)
+        return;
+
     m_activeWriteOperations.remove(&writeOperation);
     dispatchPendingWriteOperations();
 
