Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.h
@@ -87,6 +87,8 @@ public:
     String versionPath() const;
     String recordsPath() const;
 
+    ~Storage();
+
 private:
     Storage(const String& directoryPath);
 
@@ -99,33 +101,17 @@ private:
     void shrinkIfNeeded();
     void shrink();
 
-    struct ReadOperation {
-        ReadOperation(const Key& key, const RetrieveCompletionHandler& completionHandler)
-            : key(key)
-            , completionHandler(completionHandler)
-        { }
-
-        const Key key;
-        const RetrieveCompletionHandler completionHandler;
-        
-        std::unique_ptr<Record> resultRecord;
-        SHA1::Digest expectedBodyHash;
-        BlobStorage::Blob resultBodyBlob;
-        std::atomic<unsigned> finishedCount { 0 };
-    };
+    struct ReadOperation;
     void dispatchReadOperation(ReadOperation&);
     void dispatchPendingReadOperations();
     void finishReadOperation(ReadOperation&);
 
-    struct WriteOperation {
-        Record record;
-        MappedBodyHandler mappedBodyHandler;
-    };
-    void dispatchWriteOperation(const WriteOperation&);
+    struct WriteOperation;
+    void dispatchWriteOperation(WriteOperation&);
     void dispatchPendingWriteOperations();
-    void finishWriteOperation(const WriteOperation&);
+    void finishWriteOperation(WriteOperation&);
 
-    Optional<BlobStorage::Blob> storeBodyAsBlob(const Record&, const MappedBodyHandler&);
+    Optional<BlobStorage::Blob> storeBodyAsBlob(WriteOperation&);
     Data encodeRecord(const Record&, Optional<BlobStorage::Blob>);
     void readRecord(ReadOperation&, const Data&);
 
@@ -160,8 +146,8 @@ private:
     Deque<std::unique_ptr<ReadOperation>> m_pendingReadOperationsByPriority[maximumRetrievePriority + 1];
     HashSet<std::unique_ptr<ReadOperation>> m_activeReadOperations;
 
-    Deque<std::unique_ptr<const WriteOperation>> m_pendingWriteOperations;
-    HashSet<std::unique_ptr<const WriteOperation>> m_activeWriteOperations;
+    Deque<std::unique_ptr<WriteOperation>> m_pendingWriteOperations;
+    HashSet<std::unique_ptr<WriteOperation>> m_activeWriteOperations;
 
     Ref<WorkQueue> m_ioQueue;
     Ref<WorkQueue> m_backgroundIOQueue;
